#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999912 released.

        * Fixed for passwords with parentesis.


2012-05-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999911 released.

        * Changed Oracle url for berkeleydb download.


2012-04-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999910 released.

        * Updated Error message to include command.

        * Updated Term::Menus dependency to 2.15.


2012-04-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999909 released.

        * Completed fixes for mirror() to work with remote Base
          RedHat Linux and local Dest Cygwin.


2012-04-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999908 released.

        * More fixes mirror() to work with remote Base Redhat
          Linux and local Dest Cygwin.


2012-04-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999907 released.

        * Fixed mirror() to work with remote Base Redhat Linux
          and local Dest Cygwin.


2012-04-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999906 released.

        * Modified Makefile.PL to fix regex that broker permissions.


2012-04-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999905 released.

        * Changed permission for setuid for fullauto.pl from
          511 to 555 for Cygwin installations.

        * Changed permission for setuid for fullauto.pl from
          4511 to 4555 for Cygwin installations.
