@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999912';
+our $VERSION='0.999913';
 
 
 use 5.005;
